# CaoGit

./: .env.appstore  .env.updater  .gitignore  APP_STORE_CERTIFICATE_GUIDE.md  APP_STORE_GUIDE.md  APP_STORE_PRIVACY_QUESTIONNAIRE.md  APP_STORE_REVIEW_NOTES.md  APP_STORE_SETUP_STEPS.md  APP_STORE_UPLOAD_GUIDE.md  BUILD_GUIDE.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  LOCALIZATION_GUIDE.md  MACOS_BUILD_GUIDE.md  OPTIMIZATION_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_USAGE_GUIDE.md  PRIVACY.md  PRIVACY_POLICY.md  PUSH_FEATURE_SUMMARY.md  README.md  TEST_OPTIMIZATIONS.md  TITLEBAR_THEME_FIX.md  package-lock.json  package.json  release.sh  vitest.config.ts
.github/: .build-test  (+7 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements-appstore.plist  entitlements.plist  tauri.conf.appstore.json  tauri.conf.json  tauri.conf.local.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README-macOS.txt  fix-macos.command  使用说明.txt
src-tauri/resources/en.lproj/: InfoPlist.strings
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/resources/zh_CN.lproj/: InfoPlist.strings
src-tauri/scripts/: add-localization-pre-bundle.sh  add-localization.sh  create-localized-dmg.sh  fix-dmg-localization.sh
src-tauri/src/: appstore_update.rs  commands.rs  git_ops.rs  github_api.rs  keychain.rs  lib.rs  main.rs  release_commands.rs  repo_cache.rs
src-tauri/src/commands/: ai.rs  branch.rs  diff.rs  keychain.rs  merge.rs  mod.rs  remote.rs  repository.rs  response.rs  staging.rs  stash.rs  tag.rs  utils.rs
(+98 files in other folders)
