[package]
name = "tauri-app-caogit"
version = "0.2.23"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["auto-update"]
auto-update = []  # 独立分发版本的自动更新功能（DMG）
appstore = []     # App Store 版本标识

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_caogit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
home = "0.5"
lazy_static = "1.4"
lru = "0.12"
reqwest = { version = "0.11", features = ["json", "stream"] }
copypasta = "0.10"
opener = "0.7"
futures-util = "0.3"

